--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
-REACT_APP_API_URL = http://localhost:5000/api/
+REACT_APP_API_URI = http://localhost:5000/api/
+REACT_APP_API_COUNTRIES = https://restcountries.eu/rest/v2/all
 GENERATE_SOURCEMAP=false
