env file changed

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT = 5000
-MONGO_URI = mongodb+srv://portfolio:portfolio@cluster0.f904j.mongodb.net/portfolio?retryWrites=true&w=majority
-CLIENT_URI = https://ecommerce-bd.netlify.app/
+MONGO_URI = 
+CLIENT_URI = 
 NODE_ENV=Developement
