--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_URI = http://localhost:5000/api/
-REACT_APP_API_COUNTRIES = https://restcountries.eu/rest/v2/all
+REACT_APP_API_URI = 
+REACT_APP_API_COUNTRIES = 
 GENERATE_SOURCEMAP=false
